# elm-iso3166-country-codes

./: .gitignore  LICENSE  README.md  elm-iso3166.cabal  elm.json  package.json  package.yaml  stack.yaml
generate/: Main.hs
script/: elm.json
script/review/suppressed/: NoUnused.Exports.json
script/src/: Generate.elm  Types.elm
src/: Iso3166.elm
src/Iso3166/: Arabic.elm  Armenian.elm  Basque.elm  Bulgarian.elm  Chinese.elm  Croatian.elm  Czech.elm  Danish.elm  Dutch.elm  English.elm  Esperanto.elm  Estonian.elm  Finnish.elm  French.elm  German.elm  Greek.elm  Hungarian.elm  Italian.elm  Japanese.elm  Korean.elm  Lithuanian.elm  Norwegian.elm  Polish.elm  Portguese.elm  Portuguese.elm  Romanian.elm  Rusian.elm  Russian.elm  Serbian.elm  Slovak.elm  Slovenian.elm  Spanish.elm  Sweden.elm  Thai.elm  Ukrainian.elm  Ukranian.elm
src/Iso3166/Chinese/: Traditional.elm
